-Vestige Items entfernt/neu ausgesetzt mit Logiken und festen Abläufen der Curios API -Vestige Effekte zentralisiert -Vestiges hinzugefügt: StrangeEnderEye BoundOfTheCelestialSisters und HeartOfTheTank -Bug mit Render Fehler bei Aether gefixt -Vestige Items Tooltips und Rarität gefixed (Levelbeschreibungen und aktuelles Level fehlen noch)